# LibMath

./: .gitignore  CMakeLists.txt  README.md
LibMath/: CMakeLists.txt
LibMath/Header/: Arithmetic.h  Interpolation.h  Intersection.h  Matrix.h  Matrix4Vector4Operation.h  Quaternion.h  Trigonometry.h  Vector.h
LibMath/Header/Angle/: Degree.cpp  Degree.h  Radian.cpp  Radian.h
LibMath/Header/Matrix/: Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix4.h  MatrixInternal.h
LibMath/Header/Vector/: Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
LibMath/Source/: Angle.cpp  Arithmetic.cpp  Matrix.cpp  Trigonometry.cpp  Vector.cpp
LibMath_UnitTest/: CMakeLists.txt
LibMath_UnitTest/Source/: Angle_UnitTest.cpp  Main.cpp  Trigonometry_UnitTest.cpp  Vector_UnitTest.cpp
Source/: Arithmetic.cpp
